# forecast

./: .dockerignore  .gitignore  Dockerfile  app.py  code-check.sh  config.yaml  pyproject.toml  setup.cfg
notebooks/: energy-consumption-forecasting.ipynb
src/: evaluate.py  forecast.py  ingest.py  pipeline.py  train.py  transform.py
tests/: test_forecast.py  test_ingest.py  test_train.py  test_transform.py
